--- a/doc/styles/style.css
+++ b/doc/styles/style.css
@@ -14,8 +14,9 @@
 	-o-transition: 1s opacity cubic-bezier(0.00,0.00,0.5,1.00);
 } 
 body{
-	background-color:#AAF;
+	background-color:#222222;
 	font-family:sans-serif;
+	margin:0;
 }
 #container {
 	width:1000px;
@@ -29,15 +30,23 @@ body{
  * ============  HEADER   ============
  * =================================== */
 
+#div_header{
+	background-color:#666666;
+}
+
 #header{
 	height:100px;
 }
+#header td{
+	min-width:100px;
+}
 #header_menu{
-	position:absolute;
-	left:600px;
+	/*position:absolute;
+	left:600px;*/
 	border-radius:5px;
 	margin-top:50px;
 	background-color:#EEEEEE;
+	height:30px;
 }
 
 
@@ -64,6 +73,12 @@ body{
 }
 #header_menu li:hover{
 	background-color:#FFF;
+}
+
+#slogan{
+	color:white;
+	font-weight:bold;
+	font-size:30px;
 }
 
 
