--- a/doc/styles/style.css
+++ b/doc/styles/style.css
@@ -1,85 +1,7 @@
-/*.hux_prepareLoading{
-	opacity:1;
-}*/
+/* NOTE : experimental, needs improvement */
 .hux_loading {
-	opacity:1;
-}
-.hux_tAppearInit{
 	opacity:0.5;
 }
-.hux_tAppear {
-	/*-moz-transform: opacity(1);
-	-webkit-transform: opacity(1);
-	-o-transform: opacity(1);*/
-	opacity:1;
-	-moz-transition: 0.5s opacity cubic-bezier(0.00,0.00,0.5,1.00);
-	-webkit-transition: 0.5s opacity cubic-bezier(0.00,0.00,0.5,1.00);
-	-o-transition: 0.5s opacity cubic-bezier(0.00,0.00,0.5,1.00);
-}
-
-.hux_tVanish{
-	opacity:0.5;
-	-moz-transition: 0.5s opacity cubic-bezier(0.00,0.00,0.5,1.00);
-	-webkit-transition: 0.5s opacity cubic-bezier(0.00,0.00,0.5,1.00);
-	-o-transition: 0.5s opacity cubic-bezier(0.00,0.00,0.5,1.00);
-}
-.hux_tVanish ~ .hux_transition{
-	display:none;
-}
-
-
-.hux_tAppearInit#iview{ opacity:1; }
-
-.hux_tAppearInit#iview .photo{
-	-moz-transform: translate(-200px, 0);
-	-o-transform: translate(-200px, 0);
-	-webkit-transform: translate(-200px, 0);
-	opacity:0;
-	/*-moz-transform-origin: 0% 0%;
-	-o-transform-origin: 0% 0%;
-	-webkit-transform-origin: 0% 0%;*/
-}
-.hux_tAppear#iview .photo{
-	/*-moz-transform-origin: 0% 0%;
-	-o-transform-origin: 0% 0%;
-	-webkit-transform-origin: 0% 0%;*/
-	opacity:1;
-	-moz-transform: scale(1) translate(0, 0);
-	-o-transform: scale(1) translate(0, 0);
-	-webkit-transform: scale(1) translate(0, 0);
-	-moz-transition: 0.5s ease;
-	-o-transition: 0.5s ease;
-	-webkit-transition: 0.5s ease;
-}
-
-
-.hux_tVanishInit#iview .photo{
-	-moz-transform: translate(0, 0);
-	-o-transform: translate(0, 0);
-	-webkit-transform: translate(0, 0);
-	/*-moz-transform-origin: 0% 0%;
-	-o-transform-origin: 0% 0%;
-	-webkit-transform-origin: 0% 0%;*/
-}
-
-.hux_tVanish#iview{
-	/*opacity:1;*/
-	/*-moz-transform:translate(0);*/
-	-moz-transition: 0.5 ease;
-	-webkit-transition: 0.5 ease;
-	-o-transition: 0.5 ease;
-}
-.hux_tVanish#iview .photo{
-	opacity:0;
-	-moz-transform: translate(200px, 0px);
-	-o-transform:  translate(200px, 0px);
-	-webkit-transform: translate(200px, 0px);
-	-moz-transition: 0.5s ease;
-	-o-transition: 0.5s ease;
-	-webkit-transition: 0.5s ease;
-}
-
-
 
 body{
 	background-color:#222222;
@@ -97,11 +19,13 @@ a{
 	border-radius:5px;
 	height:600px;
 }
-#container > table{
-	width:100%;
+#container > table, #container > div{
 	height: 100%;
 }
 
+#container > table{
+	width:100%;
+}
 /* ===================================
  * ============  HEADER   ============
  * =================================== */
